force-app/main/default/objects/Lease_Abstract_Update__e/Lease_Abstract_Update__e.object-meta.xml
<CustomObject>
    <description>Update</description>
    <label>Lease Abstract Update</label>
    <pluralLabel>Lease Abstracts Update</pluralLabel>
</CustomObject>