force-app/main/default/objects/Lease_Abstract_Update__e/fields/Current_Monthly_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Monthly_Rent__c</fullName>
    <label>Current Monthly Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>