force-app/main/default/objects/Lease_Abstract_Update__e/fields/Divestiture_Site_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site_ID_Text__c</fullName>
    <label>Divestiture Site ID Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>