force-app/main/default/objects/Lease_Abstract_Update__e/fields/Landlord_Address__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Address__c</fullName>
    <label>Landlord Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>