force-app/main/default/objects/Lease_Abstract_Update__e/fields/Landlord_City__c.field-meta.xml
<CustomField>
    <fullName>Landlord_City__c</fullName>
    <label>Landlord City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>