force-app/main/default/objects/Lease_Abstract_Update__e/fields/Landlord_Email__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Email__c</fullName>
    <label>Landlord Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>