force-app/main/default/objects/Lease_Abstract_Update__e/fields/Landlord_Phone__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Phone__c</fullName>
    <label>Landlord Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>