force-app/main/default/objects/Lease_Abstract_Update__e/fields/Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status__c</fullName>
    <label>Lease Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>