force-app/main/default/objects/Lease_Abstract_Update__e/fields/Lease_Use__c.field-meta.xml
<CustomField>
    <fullName>Lease_Use__c</fullName>
    <label>Lease Use</label>
    <length>100</length>
    <type>Text</type>
</CustomField>