force-app/main/default/objects/Lease_Abstract_Update__e/fields/MLA__c.field-meta.xml
<CustomField>
    <fullName>MLA__c</fullName>
    <label>MLA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>