force-app/main/default/objects/Lease_Abstract_Update__e/fields/NNR_Critical_Date__c.field-meta.xml
<CustomField>
    <fullName>NNR_Critical_Date__c</fullName>
    <label>NNR Critical Date</label>
    <type>Date</type>
</CustomField>