force-app/main/default/objects/Lease_Abstract_Update__e/fields/NNR_Reason__c.field-meta.xml
<CustomField>
    <fullName>NNR_Reason__c</fullName>
    <label>NNR Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>