force-app/main/default/objects/Lease_Abstract_Update__e/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <label>Payee</label>
    <length>225</length>
    <type>Text</type>
</CustomField>