force-app/main/default/objects/Lease_Abstract_Update__e/fields/Square_Feet_of_Ground_Lease__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet_of_Ground_Lease__c</fullName>
    <label>Square Feet of Ground Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>